samples/_failures_safe/1761182699_885c53_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1dda2f37.c:140:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  140 | int matrix_trans
      | ^~~
